--- a/index.html
+++ b/index.html
@@ -11,13 +11,20 @@
             <ul>
                 <li class="logo"> <img src="pomeranian.png"> </li>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="overview.html">Overview</a></li>
-                <li><a href="install.html">Installation</a></li>
-                <li><a href="command.html">Basic Commands</a></li>
-                <li><a href="conflict.html">Resolving Conflicts</a></li>
-                <li><a href="extra.html">Extra Tutorial</a></li>
             </ul>
+            <!-- Dropdown list for Tutorial -->
+            <div class="dropdown">
+                <button class="dropbtn">Tutorial</button>
+                <div class="dropdown-content">
+                    <a href="overview.html">Overview</a>
+                    <a href="install.html">Installation</a>
+                    <a href="command.html">Basic Commands</a>
+                    <a href="conflict.html">Resolving Conflicts</a>
+                    <a href="extra.html">Extra Tutorial</a>
+                </div>
+            </div>
         </div>
+
         <!-- Overview container -->
         <div class = "overview_box">
             <div class="overview-text">
