--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title>Welcome to Git Tutorial</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
@@ -7,22 +8,16 @@
 <body>
     <div id = "container">
         <!-- NavBar -->
-        <div class = "menu">
+        <div class ="navbar">
             <ul>
-                <li class="logo"> <img src="pomeranian.png"> </li>
-                <li><a href="index.html">Home</a></li>
+                <li class="logo"> <img src="pomeranian.png"></li>
+                <li><a href="index.html">Home</a></li>    
+                <li><a href="overview.html">Overview</a></li>
+                <li><a href="install.html">Installation</a></li>
+                <li><a href="command.html">Basic Commands</a></li>
+                <li><a href="conflict.html">Resolving Conflicts</a></li>
+                <li><a href="extra.html">Extra Tutorial</a></li>
             </ul>
-            <!-- Dropdown list for Tutorial -->
-            <div class="dropdown">
-                <button class="dropbtn">Tutorial</button>
-                <div class="dropdown-content">
-                    <a href="overview.html">Overview</a>
-                    <a href="install.html">Installation</a>
-                    <a href="command.html">Basic Commands</a>
-                    <a href="conflict.html">Resolving Conflicts</a>
-                    <a href="extra.html">Extra Tutorial</a>
-                </div>
-            </div>
         </div>
 
         <!-- Overview container -->
